[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/textures/entities/player/player_animation.png" type="Texture" id=1]
[ext_resource path="res://src/game/entities/player/Player.gd" type="Script" id=2]
[ext_resource path="res://src/game/entities/player/Hurt.gd" type="Script" id=3]
[ext_resource path="res://src/game/entities/player/StateMachine.gd" type="Script" id=5]
[ext_resource path="res://src/game/entities/player/States/JumpState.gd" type="Script" id=6]
[ext_resource path="res://src/game/entities/player/States/MoveState.gd" type="Script" id=7]
[ext_resource path="res://src/game/entities/player/States/IdleState.gd" type="Script" id=8]
[ext_resource path="res://src/game/entities/player/States/NearWallState.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 32.25, 12 )

[sub_resource type="CapsuleShape2D" id=1]
radius = 19.0
height = 36.0

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Melee/MeleeShape:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 25, 27 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/Melee/MeleeShape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "attack"
length = 0.7
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14, 0.21, 0.28, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Melee/MeleeShape:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.21, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=10]
resource_name = "hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43 ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 0.55
loop = true
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=7]
resource_name = "jump"
length = 1.2
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14, 0.21, 0.28, 0.35, 0.42, 0.49, 0.56, 0.63, 0.7, 0.77, 0.84, 0.91 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 36 ]
}

[sub_resource type="Animation" id=8]
resource_name = "landing"
length = 0.4
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 38, 39 ]
}

[sub_resource type="Animation" id=9]
resource_name = "move"
length = 0.48
loop = true
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14, 0.21, 0.28, 0.35, 0.42 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=11]
resource_name = "wallSlide"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 113, 114, 115 ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )
H_SPEED_LIMIT = 600.0
jump_speed = 900.0
knockback = Vector2( 400, 400 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )
START_STATE = NodePath("Idle")
character_path = NodePath("..")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="NearWall" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="Hurt" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Body" type="Sprite" parent="."]
scale = Vector2( 2, 2.5 )
texture = ExtResource( 1 )
hframes = 8
vframes = 18
frame = 1

[node name="Melee" type="Area2D" parent="Body"]
scale = Vector2( 0.5, 0.4 )
collision_layer = 0
collision_mask = 4

[node name="MeleeShape" type="CollisionShape2D" parent="Body/Melee"]
position = Vector2( 40.75, 27 )
shape = SubResource( 6 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 33 )
shape = SubResource( 1 )

[node name="WallCheck" type="RayCast2D" parent="."]
position = Vector2( 0, 35 )
rotation = -1.5708
enabled = true
cast_to = Vector2( -0.000102997, 28 )

[node name="BodyAnimations" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/RESET = SubResource( 3 )
anims/attack = SubResource( 4 )
anims/hurt = SubResource( 10 )
anims/idle = SubResource( 5 )
anims/jump = SubResource( 7 )
anims/landing = SubResource( 8 )
anims/move = SubResource( 9 )
anims/wallSlide = SubResource( 11 )

[node name="FallTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="hit" from="." to="StateMachine" method="_on_Player_hit"]
[connection signal="body_entered" from="Body/Melee" to="." method="_on_Melee_body_entered"]
[connection signal="animation_finished" from="BodyAnimations" to="StateMachine/Jump" method="_on_BodyAnimations_animation_finished"]
[connection signal="timeout" from="FallTimer" to="." method="_on_Timer_timeout"]
